fixed overlap issue

--- a/style.css
+++ b/style.css
@@ -5,14 +5,11 @@
 .nav-sidebar {
     background-color: #f5f5f5;
     left: 0;
-    width: 75px;
-    width: 15vw;
 }
 
 .menu-tab {
     text-align: center;
     height: 20vh;
-    width: 15vw;
     font-size: 8.5vw;
     vertical-align: middle;
     background-color: #22527B;
